--- a/01_Matematica_Ciencias_Datos/Leccion07/MCDTarea4LosCeltics.rmd
+++ b/01_Matematica_Ciencias_Datos/Leccion07/MCDTarea4LosCeltics.rmd
@@ -15,6 +15,9 @@ if (!require(reticulate)){
 if (!require(matrixcalc)) {
     install.packages("matrixcalc",dependencies = TRUE,repos=c(CRAN="https://cran.cnr.berkeley.edu/"))
 }
+if (!require(base)) {
+    install.packages(" base",dependencies = TRUE,repos=c(CRAN="https://cran.cnr.berkeley.edu/"))
+}
 
 knitr::opts_chunk$set(echo = FALSE)
 ```
@@ -314,7 +317,7 @@ print("El resultado de multiplicar a y b es ",np.matmul(a, b))
 En R 
 
 ```{r echo=TRUE, cache=FALSE, prompt=TRUE, highlight=TRUE,background="gray50",message=FALSE, warning=FALSE, error=FALSE}
-a<-matrix(c(4,1,2,2),nrow=2,ncol=2,byrow=TRUE)
+a<-matrix(c(4,1,4,2),nrow=2,ncol=2,byrow=TRUE)
 d<-det(a)
 cat("El resultado de la determinante de a es ")
 print(d)
@@ -403,11 +406,29 @@ print("La matrix A^3 es: ",e)
 
 ## Descomposicion de Matrices (R) 
 
+En R 
 
+```{r echo=TRUE, error=FALSE, message=FALSE, warning=FALSE, background="gray50", cache=FALSE, highlight=TRUE, prompt=TRUE}
+a<-matrix(c(4,1,2,2,5,6,7,8,9,2,1,2),nrow=3,ncol=4,byrow=TRUE)
+e<-svd(a)
+cat("La matriz A descompuesta en las matrices U, D, V: ")
+print(e$u)
+print(e$d)
+print(e$v)
+```
 
 ## Descomposicion de Matrices (Python)
 
+En Python se puede obtener utilizando la función _linalg.svd()_ del paquete numpy
 
-
+```{python  echo=TRUE,cache=FALSE, background="gray50"}
+import numpy as np
+a = np.array([[4,1,2,2],[5,6,7,8],[9,2,1,2]])
+u,s,v = np.linalg.svd(a)
+print("La matriz A descompuesta en las matrices: ")
+print("U: ", u)
+print("S: ", s)
+print("V: ", v)
+```
 
 
